--- a/styles.css
+++ b/styles.css
@@ -3,60 +3,40 @@
     padding: 0;
     box-sizing: border-box;
 }
-.container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(10,150px);
-
-}
 body {
     background-color: #333;
-    color: aliceblue;
 }
-p {
-    font-size: 20px;
-}
-nav {
-    object-fit: cover;
-    margin: auto;
-    padding: 5px;
-
-}
-.nav   {
-    border: 2px solid aliceblue;
-    border-radius: 10px;
-    grid-column: 1/3;
-    grid-row: 1/2;
-}
-header {
-  
-    margin: 1rem;
-}
-.img {
-   
-    object-fit: contain;
-    float: right;
-    height: 100px;
-}
-footer {
-   
-    border-top: 3px solid aliceblue;
-}
-img {
-    object-fit: contain;
-    
-    height: 200px;
-    
-}
-.main {
-    grid-column: 1/2;
-    grid-row: 3/4;
+.container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 0.5rem;
+    grid-template-areas: 
+    "nav logo"
+    "header img"
+    "main main"
+    "footer footer";
 }
 .header {
-    grid-column: 1/2;
-    grid-row: 2/3;
+    grid-area: header;
 }
-.img2 {
-    grid-column: 2/3;
-    grid-row: 3/4;
+.main-nav {
+    grid-area: nav;
+    
+    border: 2px solid #000;
+}
+.main-nav ul {
+    grid-template-columns: 1fr;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+.main-nav a{
+    background-color: aquamarine;
+    display: block;
+    text-decoration: none;
+    padding: 0.8rem;
+}
+.logo {
+    height: 100px;
+    float: right;
 }
