--- a/styles.css
+++ b/styles.css
@@ -5,27 +5,61 @@
 }
 body {
     background-color: #333;
+    color: aliceblue;
+    font-size: 29px;
 }
 .container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 0.5rem;
     grid-template-areas: 
-    "nav logo"
     "header img"
+    "nav logo"
     "main main"
     "footer footer";
 }
 .header {
     grid-area: header;
+    color: #000;
+    padding: 10px;
+    margin: 10px;
+    background-color: aliceblue;
+    border: 2px solid #000;
+    border-radius: 10px;
+}
+.footer {
+    grid-area: footer;
+    padding: 10px;
+    margin-top: 180px;
+    border-top: 1px solid aliceblue;
+}
+
+.main {
+    grid-area: main;
+    padding: 20px;
+    margin: 10px;
+    background-color: #000;
+    border: 2px solid aliceblue;
+    border-radius: 175px;
+    text-align: center;
+}
+.main ul{
+    list-style: none;
+    margin: 10px;
+    padding: 10px;
+}
+.main ol{
+    list-style: none;
+    margin: 10px;
+    padding: 10px;
 }
 .main-nav {
     grid-area: nav;
-    
-    border: 2px solid #000;
+    /* border-radius: 10px;
+    border: 2px solid #000; */
 }
 .main-nav ul {
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(3, 1fr);
     list-style-type: none;
     padding: 0;
     margin: 0;
@@ -35,8 +69,56 @@ body {
     display: block;
     text-decoration: none;
     padding: 0.8rem;
+    text-align: center;
+    color: #333;
+    text-transform: uppercase;
+    font-size: 1.1rem;
+    border: 4px solid #000;
+    border-radius: 10px;
 }
 .logo {
     height: 100px;
-    float: right;
+    /* float: right; */
+    /* margin-left: 215px; */
+    display: grid;
+    justify-items: end;
+}
+.img1 {
+    object-fit: contain;
+    height: 200px;
+    margin: 10px;
+}
+@media (width > 750px) {
+    .container {
+        grid-template-columns: repeat(4, 1fr);
+        gap: 0.6rem;
+        grid-template-areas: 
+        "header header header logo"
+        "nav nav nav img1"
+        "main main main main"
+        "footer footer footer footer";
+    }
+
+    .main-nav {
+        display: grid;
+        /* Experiment */
+        align-items: center;
+    }
+    .main-nav ul {
+        display: grid;
+        gap: 5px;
+        padding: 0.5rem;
+        list-style: none;
+        grid-template-columns: repeat(3, 1fr);
+  
+    }
+    .main-nav a{
+        padding: 1rem;
+    }
+    .main-nav a:hover{
+        color: orange;
+    }
+    .header {
+        text-align: center;
+    }
 }
