--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 body {
     background-color: #333;
     color: aliceblue;
-    font-size: 29px;
+    font-size: 25px;
 }
 .container {
     display: grid;
@@ -14,7 +14,7 @@ body {
     gap: 0.5rem;
     grid-template-areas: 
     "header img"
-    "nav logo"
+    "nav nav"
     "main main"
     "footer footer";
 }
@@ -94,7 +94,7 @@ body {
         gap: 0.6rem;
         grid-template-areas: 
         "header header header logo"
-        "nav nav nav img1"
+        "nav nav nav nav"
         "main main main main"
         "footer footer footer footer";
     }
